--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@ display: flex;
 
 
 <div style="text-align: center;">
-<b>Son Sürüm: 1.0.64</b></div>
+<b>Son Sürüm: 1.0.67</b></div>
 <div style="text-align: center;font-size: 13px;">
 Telefon | Tablet | Tv | Android 4.4+ | İos 11.0+</div>
-<div class='buton99'><div style="text-align: center;margin:10px;"><a href="https://github.com/deeptvpro9/deeptvpro9.github.io/raw/main/deeptvpro-v1.0.64-android.apk">ANDROİD İÇİN İNDİR</a></div></div>
-<div class='buton99'><div style="text-align: center;margin:10px;"><a href="https://dl.dropbox.com/s/cgwwo8brb15rjjz/deeptvpro-v1.0.64-ios.ipa">İOS İÇİN İNDİR</a></div></div>
+<div class='buton99'><div style="text-align: center;margin:10px;"><a href="https://bit.ly/3HVJ89I">ANDROİD İÇİN İNDİR</a></div></div>
+<div class='buton99'><div style="text-align: center;margin:10px;"><a href="https://bit.ly/3HVJ89I">İOS İÇİN İNDİR</a></div></div>
 
 </body>
 </html>
